@@ -31,6 +31,7 @@
     "PDF::Annot::Popup" : "lib/PDF/Annot/Popup.pm",
     "PDF::Annot::Square" : "lib/PDF/Annot/Square.pm",
     "PDF::Annot::Text" : "lib/PDF/Annot/Text.pm",
+    "PDF::Annot::ThreeD" : "lib/PDF/Annot/ThreeD.pm",
     "PDF::Annot::Widget" : "lib/PDF/Annot/Widget.pm",
     "PDF::Appearance" : "lib/PDF/Appearance.pm",
     "PDF::Border" : "lib/PDF/Border.pm",
@@ -39,6 +40,7 @@
     "PDF::Catalog" : "lib/PDF/Catalog.pm",
     "PDF::Class" : "lib/PDF/Class.pm",
     "PDF::Class::Loader" : "lib/PDF/Class/Loader.pm",
+    "PDF::Class::ThreeD" : "lib/PDF/Class/ThreeD.pm",
     "PDF::Class::Type" : "lib/PDF/Class/Type.pm",
     "PDF::ColorSpace" : "lib/PDF/ColorSpace.pm",
     "PDF::ColorSpace::CalGray" : "lib/PDF/ColorSpace/CalGray.pm",
@@ -80,6 +82,7 @@
     "PDF::Image" : "lib/PDF/Image.pm",
     "PDF::Info" : "lib/PDF/Info.pm",
     "PDF::MCR" : "lib/PDF/MCR.pm",
+    "PDF::Markup::Markup3D" : "lib/PDF/Markup/Markup3D.pm",
     "PDF::Mask" : "lib/PDF/Mask.pm",
     "PDF::Mask::Alpha" : "lib/PDF/Mask/Alpha.pm",
     "PDF::Mask::Luminosity" : "lib/PDF/Mask/Luminosity.pm",
