@@ -1,0 +1,11 @@
+use v6;
+
+use PDF::Annot;
+use PDF::Class::Type;
+use PDF::Class::ThreeD;
+
+class PDF::Annot::ThreeD
+    is PDF::Annot
+    does PDF::Class::Type
+    does PDF::Class::ThreeD {
+}
