@@ -1,0 +1,11 @@
+use v6;
+
+use PDF::COS::Dict;
+use PDF::Class::Type;
+use PDF::Class::ThreeD;
+
+class PDF::Markup::Markup3D
+    is PDF::COS::Dict
+    does PDF::Class::Type
+    does PDF::Class::ThreeD {
+}
